documented all functions, some API changes

--- a/recyclerview/src/main/res/layout/br.xml
+++ b/recyclerview/src/main/res/layout/br.xml
@@ -3,7 +3,7 @@
 
     <data>
         <variable
-                name="item"
+                name="data"
                 type="Object" />
     </data>
 
